# POOTrabalhoPratico

./: Bateria.cpp  Bateria.h  CMakeLists.txt  Central.cpp  Central.h  Edificio.cpp  Edificio.h  EdificioX.cpp  EdificioX.h  Fundicao.cpp  Fundicao.h  Ilha.cpp  Ilha.h  Lenhador.cpp  Lenhador.h  MinaCarvao.cpp  MinaCarvao.h  README.md  Save.cpp  Save.h  UI.cpp  UI.h  Zona.cpp  Zona.h  main.cpp
