cmake_minimum_required(VERSION 3.19)
project(TP_FINAL)

set(CMAKE_CXX_STANDARD 14)

add_executable(TP_FINAL main.cpp Ilha.cpp Ilha.h Zona.cpp Zona.h Trabalhador.cpp Trabalhador.h Save.cpp Save.h UI.cpp UI.h Mineiro.cpp Mineiro.h Operario.cpp Operario.h Lenhador.cpp Lenhador.h Edificio.cpp Edificio.h MinaFerro.cpp MinaFerro.h MinaCarvao.cpp MinaCarvao.h Central.cpp Central.h Bateria.cpp Bateria.h Fundicao.cpp Fundicao.h EdificioX.cpp EdificioX.h)